--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
-	<body>
-	</body>
-</html>
+---
+layout: default
+title: test title
+---
+<p>Hello world!</p>
